--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -19,7 +19,7 @@
 
 }
 
-@keyframes move-clouds-back {
+@keyframes move-twink-back {
     from {
         background-position: 0 0;
     }
@@ -60,5 +60,13 @@
 .twinkling {
     background: transparent url(../assets/twinkling.png) repeat top center;
     z-index: 1;
-    animation: move-twinkle-back 200s linear infinite;
+    animation: move-twink-back 200s linear infinite;
+}
+
+.clouds {
+    background: transparent url(../assets/clouds.png) repeat top center;
+    z-index: 2;
+    opacity: .4;
+    animation: move-clouds-back 200s linear infinite;
+
 }
