--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,9 @@
 .header {
   background: #b71775;
   height: 200px;
+  z-index: 10;
+  position: absolute;
+  top: 0px
 }
 
 .header h1 {
@@ -9,4 +12,14 @@
   text-align: center;
   color: white;
   font-size: 3rem;
+}
+
+.nav {
+  position: absolute;
+  margin-top: 0px;
+
+}
+
+.navbar-custom {
+  background-color: -webkit-linear-gradient(#eee, #333);
 }
