--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -2,6 +2,7 @@
     font-size: 36px;
     font-family: 'Lato', sans-serif;
     margin-top: 10em;
+    margin-bottom: 5em;
     ;
     margin-left: auto;
     margin-right: auto;
