--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@
         position: 1000px 0;
     }
 } */
+
+.hide-element {
+    display: none;
+}
+
+.show-element {
+    display: block;
+}
+
 /** spacing between li elements next to carousels */
 .ulCarousel li {
     margin-bottom: 20px;
@@ -31,7 +40,7 @@
 
 }
 
-.logo img:hover {
+/* .logo img:hover {
     animation: close;
 }
 
@@ -43,8 +52,45 @@
     to {
         animation-play-state: running;
     }
+} */
+
+#wiggle:hover {
+    /* animation: wiggle 75ms infinite;
+    animation-timing-function: linear;
+     */
+    animation: pulse 1s infinite;
+    animation-timing-function: linear;
 }
 
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+
+    }
+}
+
+/* @keyframes wiggle {
+    0% {
+        transform: translate(2px, 0);
+    }
+
+    50% {
+        transform: translate(-2px, 0);
+    }
+
+    100% {
+        transform: translate(2px, 0);
+    }
+
+} */
 
 .moon img {
     width: 150px;
