--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 /* @keyframes move-moon-back {
     from {
         position: 0 0;
@@ -8,6 +9,10 @@
         position: 1000px 0;
     }
 } */
+
+header {
+    font-family: 'Climate Crisis';
+}
 
 .hide-element {
     display: none;
@@ -30,11 +35,12 @@
 
     /* background-color: red; */
     position: absolute;
-    left: 200px;
-    top: 55px;
+    left: 130px;
+    top: 57px;
     animation-name: logo;
     animation-duration: 4s;
     animation-direction: normal;
+
 
     /* animation-iteration-count: infinite; */
 
@@ -54,6 +60,54 @@
     }
 } */
 
+.rotate::click {
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+    animation-name: rotate;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+}
+
+/* .box:hover {
+    animation-play-state: running;
+  } */
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0);
+
+    }
+
+    100% {
+        transform: rotate(360deg);
+
+    }
+
+    from {
+        left: 300px;
+    }
+
+    to {
+        left: 600px;
+    }
+}
+
+.logo img:hover {
+    animation: close;
+}
+
+@keyframes close {
+    from {
+        animation-play-state: paused;
+    }
+
+    to {
+        animation-play-state: running;
+    }
+}
+
 #wiggle:hover {
     /* animation: wiggle 75ms infinite;
     animation-timing-function: linear;
@@ -61,6 +115,13 @@
     animation: pulse 1s infinite;
     animation-timing-function: linear;
 }
+
+#zoom:hover {
+    transform: scale(5.0);
+    transition: all ease 1s;
+}
+
+
 
 @keyframes pulse {
     0% {
@@ -97,7 +158,7 @@
 
     /* background-color: red; */
     position: relative;
-    left: 20px;
+    left: 35px;
     animation-name: moon;
     animation-duration: 4s;
     animation-direction: reverse;
@@ -108,6 +169,7 @@
     animation: close;
 }
 
+/* moon is mylogo-part-one */
 @keyframes moon {
     0% {
         /* background-color: red; */
@@ -149,13 +211,13 @@
 @keyframes logo {
     0% {
         /* background-color: #EA337F; */
-        left: 200px;
+        left: 130px;
         top: 55px;
     }
 
     25% {
         /* background-color: yellow; */
-        left: 200px;
+        left: 130px;
         top: 255px;
     }
 
@@ -173,7 +235,7 @@
 
     100% {
         /* background-color: red; */
-        left: 200px;
+        left: 130px;
         top: 55px;
     }
 }
@@ -200,10 +262,10 @@ html {
 }
 
 
-
+/* 
 .regularBackground {
     background-color: #000000;
-}
+} */
 
 /* Sections
      ========================================================================== */
@@ -212,15 +274,16 @@ html {
    */
 body {
     margin: 0;
-    font-family: 'Cascadia Code', serif;
+    font-family: 'Gravitas One', serif;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: rgb(254, 252, 228);
+
+    /* background: rgb(254, 252, 228);
     background: linear-gradient(180deg,
             rgb(0, 0, 0) 0%,
             rgb(0, 0, 0) 52%,
-            rgb(255, 100, 76) 100%);
+            rgb(255, 100, 76) 100%); */
 }
 
 /**
