--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -21,5 +21,5 @@
 }
 
 .navbar-custom {
-  background-color: -webkit-linear-gradient(#eee, #333);
+  background-color: -webkit-linear-gradient(#EFEEF5, #333);
 }
