--- a/src/index.css
+++ b/src/index.css
@@ -59,40 +59,209 @@ header {
         animation-play-state: running;
     }
 } */
-
-.rotate::click {
-    border-radius: 10px;
-    width: 200px;
-    height: 200px;
-    animation-name: rotate;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-play-state: running;
+/* ball left-most */
+.ball {
+    box-shadow: inset -5px -5px 5px rgba(231, 198, 228, 0.6), 15px 15px 2px rgba(0, 0, 0, .04);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    animation-iteration-count: 6;
 }
 
-/* .box:hover {
-    animation-play-state: running;
-  } */
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0);
-
-    }
-
-    100% {
-        transform: rotate(360deg);
-
-    }
-
+@keyframes bounce {
     from {
-        left: 300px;
+        transform: translate3d(0, 0, 0);
     }
 
     to {
-        left: 600px;
+        transform: translate3d(0, 200px, 0);
     }
 }
+
+/* Prefix Support */
+
+.ball {
+    -webkit-animation-name: bounce;
+    -webkit-animation-duration: 0.5s;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    -webkit-animation-iteration-count: 6;
+}
+
+@-webkit-keyframes bounce {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 200px, 0);
+        transform: translate3d(0, 200px, 0);
+    }
+}
+
+/* ball left-most */
+
+
+/* ball middle */
+.ball-later {
+    box-shadow: inset -5px -5px 5px rgba(231, 198, 228, 0.6), 15px 15px 2px rgba(0, 0, 0, .04);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    animation-iteration-count: 6;
+}
+
+@keyframes bounce {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        transform: translate3d(0, 200px, 0);
+    }
+}
+
+/* Prefix Support */
+
+.ball-later {
+    -webkit-animation-name: bounce;
+    -webkit-animation-duration: 0.75s;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    -webkit-animation-iteration-count: 6;
+}
+
+@-webkit-keyframes bounce {
+    from {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        -webkit-transform: translate3d(0, 200px, 0);
+        transform: translate3d(0, 200px, 0);
+    }
+}
+
+/* rotate */
+.rotate {
+    display: block;
+    border-radius: 100px;
+    width: 200px;
+    height: 200px;
+    background: #EEEDF4;
+    border-radius: 50%;
+    background: -webkit-radial-gradient(25px 25px, circle, red, #000);
+    background: -moz-radial-gradient(25px 25px, circle, red, #000);
+    background: radial-gradient(25px 25px, circle, red, #000);
+
+    /* Animation to spin and move the sphere */
+    -webkit-animation: spin 1000ms linear infinite, moveLeftToRight 5s linear infinite;
+    -moz-animation: spin 1000ms linear infinite, moveLeftToRight 5s linear infinite;
+    -ms-animation: spin 1000ms linear infinite, moveLeftToRight 5s linear infinite;
+    animation: spin 1000ms linear infinite, moveLeftToRight 5s linear infinite;
+
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+
+    position: absolute;
+    left: 0;
+}
+
+
+/* Spinning the sphere using key frames */
+@-ms-keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+    }
+
+    to {
+        -ms-transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes spin {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+
+    to {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+/* Move sphere from left to right */
+@-moz-keyframes moveLeftToRight {
+    0% {
+        left: -100px;
+    }
+
+    100% {
+        left: 100%;
+    }
+}
+
+@-ms-keyframes moveLeftToRight {
+    0% {
+        left: -100px;
+    }
+
+    100% {
+        left: 100%;
+    }
+}
+
+@keyframes moveLeftToRight {
+    0% {
+        left: -100px;
+    }
+
+    100% {
+        left: 100%;
+    }
+}
+
+@-webkit-keyframes moveLeftToRight {
+    0% {
+        left: -100px;
+    }
+
+    100% {
+        left: 100%;
+    }
+}
+
+/* rotate */
+
+
+
 
 .logo img:hover {
     animation: close;
@@ -117,7 +286,7 @@ header {
 }
 
 #zoom:hover {
-    transform: scale(5.0);
+    transform: scale(2.0);
     transition: all ease 1s;
 }
 
