--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -23,3 +23,94 @@
 .navbar-custom {
   background-color: -webkit-linear-gradient(#EFEEF5, #333);
 }
+
+/* moving balls */
+/* https://codepen.io/luissquall/pen/njqqQL */
+#canvas {
+  position: relative;
+  /* width: 400px;
+  height: 400px;
+  background: rgb(255, 0, 100); */
+}
+
+#circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  background: #1818db;
+  src: url('../assets/my-logo-2.png');
+  margin-top: -50px;
+  margin-left: -50px;
+  border-radius: 50px;
+}
+
+.my-logo {
+  left: 0px;
+  width: 100px;
+  height: 100px;
+}
+
+.ball {
+  position: absolute;
+  top: 100px;
+  left: 600px;
+  width: 10px;
+  height: 10px;
+  background: linear-gradient(217deg, rgba(255, 0, 0, .8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, .8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, .8), rgba(0, 0, 255, 0) 70.71%);
+  border-radius: 10px;
+  transition-property: left, top;
+  transition-duration: 1s;
+  text-align: center;
+  font-size: 12px;
+  color: whitesmoke;
+  line-height: 20px;
+}
+
+#ball-1 {
+  z-index: 1;
+  transform: scale(2.0);
+  transition: all ease 1s;
+}
+
+
+#circle:hover #ball-1 {
+  left: 600px;
+  top: 0px;
+  transition-timing-function: ease;
+}
+
+#circle:hover #ball-2 {
+  left: 400px;
+  top: 50px;
+  background: linear-gradient(to right, blue, pink);
+  transition-timing-function: linear;
+}
+
+#circle:hover #ball-3 {
+  left: 500px;
+  top: 50px;
+  background: linear-gradient(to right, blue, pink);
+  transition-timing-function: ease-in;
+}
+
+#circle:hover #ball-4 {
+  left: 700px;
+  top: 50px;
+  background: linear-gradient(to right, blue, pink);
+  transition-timing-function: ease-out;
+}
+
+#circle:hover #ball-5 {
+  left: 800px;
+  top: 50px;
+  background: linear-gradient(to right, blue, pink);
+  transition-timing-function: ease-in-out;
+}
+
+/* #circle:hover #ball-6 {
+  left: 900px;
+  top: 50px;
+  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+} */
