added functionality of moving topper on top of wheel upon page load, and other topper dissapears

--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -66,7 +66,7 @@
 
 /* changed from #000 (black) */
 .stars {
-    background: #EFEEF5 url(../assets/stars.png) repeat top center;
+    background: #cccadc url(../assets/stars.png) repeat top center;
     z-index: -2;
 }
 
