--- a/src/styles/SkillsStyle.css
+++ b/src/styles/SkillsStyle.css
@@ -1,9 +1,9 @@
 .bubble {
     position: absolute;
-    top: 500px;
+    /* top: 500px;
     left: 500px;
     width: 150px;
-    height: 150px;
+    height: 150px; */
 
     background: transparent conic-gradient(from 90deg at 50% 50%, #5DB7EB 0.00%, #B3B8EB 7.77%, #7FAEDC 19.25%, #B3AFFA 26.87%, #FECAFD 37.45%, #509ACC 44.42%, #4DB2E1 50.83%, #B0E7F2 59.83%, #3593C0 67.41%, #6B90BA 74.06%, #B494C1 81.83%, #3BC8EA 90.78%, #4BD3F3 100.00%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
@@ -21,7 +21,7 @@
 .bubble img {
     width: 150px;
     border-radius: 100px;
-    margin-top: 30px;
+    /* margin-top: 10px; */
     backdrop-filter: blue(5px);
 }
 
@@ -44,7 +44,7 @@
 
 .bubbleTop:hover {
     animation-name: blink;
-    animation-duration: 7s;
+    animation-duration: 15s;
     animation-iteration-count: infinite;
     content: 'Etiquette';
 }
