--- a/src/styles/SkillsStyle.css
+++ b/src/styles/SkillsStyle.css
@@ -44,7 +44,7 @@
 
 .bubbleTop:hover {
     animation-name: blink;
-    animation-duration: 15s;
+    animation-duration: 9s;
     animation-iteration-count: infinite;
     content: 'Etiquette';
 }
@@ -80,7 +80,22 @@
     height: 150px;
     border-radius: 100px;
     background: transparent linear-gradient(180deg, #D5E9F6 0%, #DDE8F4 8%, #F9EBF2 16%, #E0E9F6 19%, #F6ECF6 27%, #EFE7F2 37%, #DAE6F0 44%, #EAEAF9 51%, #DDE4EF 57%, #D6E4ED 65%, #D9FEFE 74%, #FBE9F4 82%, #DAE4ED 91%, #D7E3EC 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.81;
+    opacity: 0.71;
+    text-align: center;
+    /* animation-name: blink;
+    animation-duration: 2s; */
+
+}
+
+.bubbleTopYellow {
+    position: absolute;
+    top: 500px;
+    left: 500px;
+    width: 150px;
+    height: 150px;
+    border-radius: 100px;
+    background: transparent linear-gradient(180deg, #D5E9F6 0%, #b0e041 8%, #e9f4be 16%, #E0E9F6 19%, #F6ECF6 27%, #EFE7F2 37%, #DAE6F0 44%, #EAEAF9 51%, #DDE4EF 57%, #D6E4ED 65%, #D9FEFE 74%, #FBE9F4 82%, #DAE4ED 91%, #D7E3EC 100%) 0% 0% no-repeat padding-box;
+    opacity: 0.71;
     text-align: center;
     /* animation-name: blink;
     animation-duration: 2s; */
