--- a/src/styles/SkillsStyle.css
+++ b/src/styles/SkillsStyle.css
@@ -1,29 +1,30 @@
 .bubble {
-    position: absolute;
+    /* position: absolute; */
     /* top: 500px;
     left: 500px;
     width: 150px;
     height: 150px; */
 
     background: transparent conic-gradient(from 90deg at 50% 50%, #5DB7EB 0.00%, #B3B8EB 7.77%, #7FAEDC 19.25%, #B3AFFA 26.87%, #FECAFD 37.45%, #509ACC 44.42%, #4DB2E1 50.83%, #B0E7F2 59.83%, #3593C0 67.41%, #6B90BA 74.06%, #B494C1 81.83%, #3BC8EA 90.78%, #4BD3F3 100.00%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    opacity: 1;
-    border-radius: 100px;
+    /* box-shadow: 0px 3px 6px #00000029; */
+    /* opacity: 1; */
+    /* border-radius: 100px; */
     transition-property: left, top;
     transition-duration: 1s;
-    text-align: center;
-    font-size: 12px;
-    color: whitesmoke;
-    line-height: 20px;
-    opacity: .61;
+    /* text-align: center; */
+    /* font-size: 12px; */
+    /* color: whitesmoke; */
+    /* line-height: 20px; */
+    /* opacity: .61; */
 }
 
-.bubble img {
-    width: 150px;
-    border-radius: 100px;
-    /* margin-top: 10px; */
-    backdrop-filter: blue(5px);
-}
+/* .bubble img { */
+/* width: 150px; */
+/* border-radius: 100px; */
+/* opacity: 1; */
+/* margin-top: 10px; */
+/* backdrop-filter: blue(5px); */
+/* } */
 
 /* .bubble img:hover {
     animation-name: blink;
@@ -42,11 +43,11 @@
 
 } */
 
-.bubbleTop:hover {
+.bubbleTop:hover,
+.bubbleTopYellow:hover {
     animation-name: blink;
     animation-duration: 9s;
     animation-iteration-count: infinite;
-    content: 'Etiquette';
 }
 
 @keyframes blink {
@@ -59,44 +60,46 @@
     }
 
     50% {
-        opacity: .1;
+        opacity: 0;
     }
 
     75% {
-        opacity: .1;
+        opacity: 0;
     }
 
     100% {
-        opacity: .1;
+        opacity: 0;
     }
 
 }
 
+/* Blog for Tech bubble's top layer */
 .bubbleTop {
-    position: absolute;
-    top: 500px;
+    /* position: absolute; */
+    /* top: 500px;
     left: 500px;
     width: 150px;
-    height: 150px;
-    border-radius: 100px;
+    height: 150px; */
+    /* border-radius: 100px; */
     background: transparent linear-gradient(180deg, #D5E9F6 0%, #DDE8F4 8%, #F9EBF2 16%, #E0E9F6 19%, #F6ECF6 27%, #EFE7F2 37%, #DAE6F0 44%, #EAEAF9 51%, #DDE4EF 57%, #D6E4ED 65%, #D9FEFE 74%, #FBE9F4 82%, #DAE4ED 91%, #D7E3EC 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.71;
-    text-align: center;
+    /* opacity: 0.71; */
+    /* text-align: center; */
     /* animation-name: blink;
     animation-duration: 2s; */
 
 }
 
+/* Etiquette bubble's top layer */
 .bubbleTopYellow {
-    position: absolute;
-    top: 500px;
+    /* position: absolute; */
+    /* top: 500px;
     left: 500px;
     width: 150px;
-    height: 150px;
-    border-radius: 100px;
+    height: 150px; */
+    /* border-radius: 100px; */
     background: transparent linear-gradient(180deg, #D5E9F6 0%, #b0e041 8%, #e9f4be 16%, #E0E9F6 19%, #F6ECF6 27%, #EFE7F2 37%, #DAE6F0 44%, #EAEAF9 51%, #DDE4EF 57%, #D6E4ED 65%, #D9FEFE 74%, #FBE9F4 82%, #DAE4ED 91%, #D7E3EC 100%) 0% 0% no-repeat padding-box;
-    opacity: 0.71;
-    text-align: center;
+    /* opacity: 0.71; */
+    /* text-align: center; */
     /* animation-name: blink;
     animation-duration: 2s; */
 
