added display component upon clicking by id

--- a/src/styles/SkillsStyle.css
+++ b/src/styles/SkillsStyle.css
@@ -185,6 +185,14 @@
 
 }
 
+.show-element {
+    display: block
+}
+
+.hide-element {
+    display: none;
+}
+
 /* #threeD:hover {
     animation-duration: 20s;
     animation-iteration-count: 2;
