--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -58,7 +58,7 @@
   left: 600px;
   width: 10px;
   height: 10px;
-  background: linear-gradient(217deg, rgba(255, 0, 0, .8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, .8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, .8), rgba(0, 0, 255, 0) 70.71%);
+  background: linear-gradient(217deg, rgb(255, 20, 147, .8), rgba(255, 255, 255, 0) 70.71%), linear-gradient(127deg, rgb(0, 255, 127), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgb(0, 255, 255, .8), rgb(0, 255, 127, 0) 70.71%);
   border-radius: 10px;
   transition-property: left, top;
   transition-duration: 1s;
@@ -84,28 +84,28 @@
 #circle:hover #ball-2 {
   left: 400px;
   top: 50px;
-  background: linear-gradient(to right, blue, pink);
+  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
   transition-timing-function: linear;
 }
 
 #circle:hover #ball-3 {
   left: 500px;
   top: 50px;
-  background: linear-gradient(to right, blue, pink);
+  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
   transition-timing-function: ease-in;
 }
 
 #circle:hover #ball-4 {
   left: 700px;
   top: 50px;
-  background: linear-gradient(to right, blue, pink);
+  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
   transition-timing-function: ease-out;
 }
 
 #circle:hover #ball-5 {
   left: 800px;
   top: 50px;
-  background: linear-gradient(to right, blue, pink);
+  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
   transition-timing-function: ease-in-out;
 }
 
