--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -64,7 +64,7 @@
   transition-duration: 1s;
   text-align: center;
   font-size: 12px;
-  color: whitesmoke;
+  color: #BEBCCC;
   line-height: 20px;
 }
 
@@ -84,28 +84,28 @@
 #circle:hover #ball-2 {
   left: 400px;
   top: 50px;
-  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
+  background: linear-gradient(to right, #EFEEF5, #FCFCFC, #EFEEF6);
   transition-timing-function: linear;
 }
 
 #circle:hover #ball-3 {
   left: 500px;
   top: 50px;
-  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
+  background: linear-gradient(to right, #EFEEF5, #FCFCFC, #EFEEF6);
   transition-timing-function: ease-in;
 }
 
 #circle:hover #ball-4 {
   left: 700px;
   top: 50px;
-  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
+  background: linear-gradient(to right, #EFEEF5, #FCFCFC, #EFEEF6);
   transition-timing-function: ease-out;
 }
 
 #circle:hover #ball-5 {
   left: 800px;
   top: 50px;
-  background: linear-gradient(to right, rgb(0, 255, 255, .8), rgb(0, 255, 127));
+  background: linear-gradient(to right, #EFEEF5, #FCFCFC, #EFEEF6);
   transition-timing-function: ease-in-out;
 }
 
