--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -39,7 +39,7 @@
   left: 50%;
   width: 100px;
   height: 100px;
-  background: #1818db;
+  background: transparent linear-gradient(180deg, #C6F4FD 0%, #DDFEEA 15%, #FFF7FC 29%, #FFE0FD 47%, #F4E6FF 60%, #DFD5FC 75%, #F0D5FF 90%, #F9E8FE 100%) 0% 0% no-repeat padding-box;
   src: url('../assets/my-logo-2.png');
   margin-top: -30px;
   margin-left: -30px;
@@ -58,7 +58,7 @@
   left: 600px;
   width: 10px;
   height: 10px;
-  background: linear-gradient(217deg, rgb(255, 20, 147, .8), rgba(255, 255, 255, 0) 70.71%), linear-gradient(127deg, rgb(0, 255, 127), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgb(0, 255, 255, .8), rgb(0, 255, 127, 0) 70.71%);
+  background: linear-gradient(217deg, rgba(207, 255, 255, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(233, 255, 212), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(237, 220, 250, 0.8), rgb(0, 255, 127, 0) 70.71%);
   border-radius: 10px;
   transition-property: left, top;
   transition-duration: 1s;
