--- a/src/styles/ContactStyle.css
+++ b/src/styles/ContactStyle.css
@@ -1,4 +1,4 @@
-.circle-animation {
+/* .circle-animation {
     position: relative;
     width: 200px;
     height: 200px;
@@ -33,7 +33,7 @@
     100% {
         box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
     }
-}
+} */
 
 /* .circle-container {
   position: relative;
@@ -93,20 +93,63 @@
 
 #main-circle {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 500px;
     border-radius: 50%;
-    background-color: gray;
+    /* background-color: gray; */
+    /* background: radial-gradient(50% 50%, #CBDAF5 0%, #FBFFFF 100%); */
+    /* background: url('../assets/topper-blue.png'); */
+    background-size: cover;
 }
 
 .sub-circle {
-    position: absolute;
+    /* position: absolute;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: white;
-    transition: all 0.5s;
+    background-color: white; */
+    /* transition: all 0.5s; */
+    transition: background 0.3s ease;
+
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    /* background-color: #fff; */
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    animation: float 3.5s ease-in-out infinite;
+    background: radial-gradient(circle at 75% 30%,
+            white 5px,
+            aqua 8%,
+            darkblue 60%,
+            aqua 100%);
+    box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc,
+        inset 88px 0px 60px #c2d8fe, inset -20px -60px 100px #fde9ea,
+        inset 0 50px 140px #fde9ea, 0 0 90px #fff;
+
 }
+
+
+@keyframes float {
+    0% {
+        transform: translatey(0px);
+    }
+
+    50% {
+        transform: translatey(-80px);
+    }
+
+    100% {
+        transform: translatey(0px);
+    }
+}
+
 
 #sub-circle1 {
     top: 25px;
@@ -128,12 +171,74 @@
     right: 25px;
 }
 
+#sub-circle5 {
+    bottom: 175px;
+    right: 175px;
+}
+
 .sub-circle:hover {
-    background-color: lightblue;
+    background: radial-gradient(circle at 75% 30%, white 5px, #97e9f6 8%, #b8f2ad 60%, #fba3f5 80%, #f8f8b8 90%);
+    border: #FF71E9;
+    box-shadow: 0 5px 10px rgba(245, 111, 216, 0.5);
+
+}
+
+.sub-circle:hover .shadow {
+    background: radial-gradient(circle at 75% 30%, white 5px, #97e9f6 8%, #b8f2ad 60%, #fba3f5 80%, #f8f8b8 90%);
+    border: #FF71E9;
+    box-shadow: 0 5px 10px rgba(245, 111, 216, 0.5);
+
 }
 
 .sub-circle.active {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     background-color: blue;
+}
+
+.shadow {
+    /* background: #b490b2; */
+    background: radial-gradient(50% 50%, #4F5A74 0%, #93A1BA 100%);
+    /* background: url('../assets/topper-squished.png'); */
+    background-size: cover;
+    width: 150px;
+    height: 40px;
+    top: 70%;
+    animation: expand 4s infinite;
+    position: absolute;
+    border-radius: 50%;
+    margin-top: 60px;
+    opacity: .3;
+}
+
+/* .shadow:hover {
+    background: radial-gradient(circle at 75% 30%, white 5px, #97e9f6 8%, #b8f2ad 60%, #fba3f5 80%, #f8f8b8 90%);
+} */
+
+@keyframes expand {
+
+    0%,
+    100% {
+        transform: scale(0.5);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+}
+
+.b-icon {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.b-icon img {
+    width: 30%;
+    height: auto;
+    pointer-events: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
 }
