--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -66,7 +66,7 @@
 
 .twinkling {
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -74,13 +74,17 @@
     height: 100%;
     display: block;
     background-size: cover;
+    background: none;
+    background-color: black;
+    opacity: .8;
+
 }
 
 
 /* changed from #000 (black) */
 .stars {
     /* background: #cccadc url(../assets/stars.png) repeat top center; */
-    background: #cccadc url(../assets/stars.png) repeat top center;
+    background: #e8fafe url(../assets/stars.png) repeat top center;
 
     z-index: -20;
 }
