--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -16,7 +16,7 @@
 
     display: block;
     position: relative;
-    z-index: 3;
+    /* z-index: 3; */
 
 }
 
@@ -59,7 +59,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 5000px;
+    height: 3000px;
     display: block;
 }
 
@@ -71,14 +71,31 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
-    display: block;
+    height: 3000px;
+    /* display: block; */
     background-size: cover;
-    background: none;
-    background-color: black;
-    opacity: .8;
+    /* background: none; */
+    /* background-color: black; */
+    opacity: .6;
+    /* background-color: transparent white; */
 
 }
+
+/* 
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.circle {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    border-radius: 50%;
+} */
+
 
 
 /* changed from #000 (black) */
@@ -86,13 +103,13 @@
     /* background: #cccadc url(../assets/stars.png) repeat top center; */
     background: #e8fafe url(../assets/stars.png) repeat top center;
 
-    z-index: -20;
+    z-index: -3;
 }
 
 .twinkling {
     /* background: transparent url(../assets/twinkling-2.png) repeat top center; */
     background: url(../assets/ball-test.png) repeat top center;
-    z-index: -1;
+    z-index: -2;
     animation: move-twink-back 2000s linear infinite;
 }
 
@@ -103,7 +120,7 @@
 
 .clouds {
     background: transparent url(../assets/clouds.png) repeat top center;
-    z-index: 0;
+    z-index: -3;
     opacity: .4;
     animation: move-clouds-back 200s linear infinite;
 
