--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -2,7 +2,7 @@
     font-size: 36px;
     font-family: 'Lato', sans-serif;
     margin-top: 1em;
-    margin-bottom: 2em;
+    /* margin-bottom: 2em; */
     ;
     margin-left: auto;
     margin-right: auto;
@@ -46,7 +46,7 @@
     }
 
     to {
-        background-position: -10000px 5000px;
+        background-position: -10000px 0px;
     }
 }
 
@@ -59,7 +59,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 3000px;
+    height: 1500px;
     display: block;
 }
 
@@ -71,12 +71,12 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 3000px;
+    height: 1500px;
     /* display: block; */
     background-size: cover;
     /* background: none; */
     /* background-color: black; */
-    opacity: .6;
+    opacity: .8;
     /* background-color: transparent white; */
 
 }
@@ -101,7 +101,8 @@
 /* changed from #000 (black) */
 .stars {
     /* background: #cccadc url(../assets/stars.png) repeat top center; */
-    background: #e8fafe url(../assets/stars.png) repeat top center;
+    /* background: url(../assets/stars.png) repeat top center; */
+    background: linear-gradient(217deg, rgba(207, 255, 255, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(233, 255, 212), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(237, 220, 250, 0.8), rgb(0, 255, 127, 0) 70.71%);
 
     z-index: -3;
 }
