--- a/src/styles/BackgroundCirclesStyle.css
+++ b/src/styles/BackgroundCirclesStyle.css
@@ -1,5 +1,5 @@
 .background {
-    position: fixed;
+    position: absolute;
     /* width: 110%; */
     /* top: 0;
     left: 0; */
@@ -13,10 +13,10 @@
     bottom: 0;
     z-index: 0;
     overflow: hidden;
-
-    display: flex;
+    height: 1500px;
+    /* display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: flex-start; */
     /* animation: slideBackground 0s linear infinite; */
 }
 
@@ -27,7 +27,7 @@
     margin: 0;
     border-radius: 50%;
     overflow: hidden;
-    animation: move-right 200s linear infinite;
+    /* animation: move-right 200s linear infinite; */
     opacity: .7;
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(159, 245, 255, 0.3);
