--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,12 @@ footer {
     position: absolute;
     left: 0;
     bottom: 0;
-    top: 1500px;
+    top: 1460px;
     width: 100%;
     text-align: center;
     color: gray;
+    font-size: 14px;
+    font-family: GravitasOne;
 }
 
 .hide-element {
