--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -102,7 +102,9 @@
 .stars {
     /* background: #cccadc url(../assets/stars.png) repeat top center; */
     /* background: url(../assets/stars.png) repeat top center; */
-    background: linear-gradient(217deg, rgba(207, 255, 255, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(233, 255, 212), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(237, 220, 250, 0.8), rgb(0, 255, 127, 0) 70.71%);
+    /* background: linear-gradient(217deg, rgba(207, 255, 255, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(233, 255, 212), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(237, 220, 250, 0.8), rgb(0, 255, 127, 0) 70.71%); */
+    background: linear-gradient(217deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(0, 0, 0), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 0, 0.8), rgb(0, 255, 127, 0) 70.71%);
+    /* background-color: '#000000'; */
 
     z-index: -3;
 }
