changed smise artboards because iframes were loading to slow, changed to scrollable pngs

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ footer {
     top: 1460px;
     width: 100%;
     text-align: center;
-    color: gray;
+    color: rgb(167, 163, 163);
     font-size: 14px;
     font-family: GravitasOne;
 }
