--- a/src/styles/BackgroundCirclesStyle.css
+++ b/src/styles/BackgroundCirclesStyle.css
@@ -9,7 +9,7 @@
     bottom: -50px; */
     top: -80px;
     left: 0;
-    right: -50px;
+    right: 0;
     bottom: 0;
     z-index: 0;
     overflow: hidden;
