changed styling, theme, design and colors to be more consistent and clear

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ footer {
     border-radius: 100px;
     width: 200px;
     height: 200px;
-    background: #EEEDF4;
+    background: #61D2FA;
     border-radius: 50%;
     /* background: -webkit-radial-gradient(25px 25px, circle, red, #000);
     background: -moz-radial-gradient(25px 25px, circle, red, #000);
