--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -26,7 +26,7 @@
     }
 
     to {
-        background-position: 10000px 0;
+        background-position: 10000px -800px;
     }
 }
 
@@ -36,7 +36,7 @@
     }
 
     to {
-        background-position: 10000px 0;
+        background-position: 10000px 1000px;
     }
 }
 
@@ -76,7 +76,7 @@
     background-size: cover;
     /* background: none; */
     /* background-color: black; */
-    opacity: .9;
+    opacity: .6;
     /* background-color: transparent white; */
 
 }
@@ -103,7 +103,8 @@
     /* background: #cccadc url(../assets/stars.png) repeat top center; */
     /* background: url(../assets/stars.png) repeat top center; */
     /* background: linear-gradient(217deg, rgba(207, 255, 255, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(233, 255, 212), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(237, 220, 250, 0.8), rgb(0, 255, 127, 0) 70.71%); */
-    background: linear-gradient(217deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(0, 0, 0), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 0, 0.8), rgb(0, 255, 127, 0) 70.71%);
+    /* background: linear-gradient(217deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 251, 0) 70.71%), linear-gradient(127deg, rgb(0, 0, 0), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 0, 0.8), rgb(0, 255, 127, 0) 70.71%); */
+    background: black;
     /* background-color: '#000000'; */
 
     z-index: -3;
@@ -112,10 +113,11 @@
 .twinkling {
     /* background: transparent url(../assets/twinkling-2.png) repeat top center; */
     /* background: url(../assets/ball-test.png) repeat top center; */
-    background: url(../assets/favicon-bubble-one.png) repeat top center;
+    background: url(../assets/wind.png) repeat center;
 
     z-index: -2;
-    animation: move-twink-back 2000s linear infinite;
+    animation: move-twink-back 40s ease-in-out infinite;
+    /* animation-delay: 5s; */
 }
 
 /* 
