--- a/src/styles/BackgroundCirclesStyle.css
+++ b/src/styles/BackgroundCirclesStyle.css
@@ -9,10 +9,10 @@
     bottom: -50px; */
     top: -80px;
     left: 0;
-    right: 0;
+    right: -40px;
     bottom: 0;
     z-index: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 1500px;
     /* display: flex;
     flex-wrap: wrap;
@@ -30,7 +30,7 @@
     /* animation: move-right 200s linear infinite; */
     opacity: .9;
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(159, 245, 255, 0.3);
+    border: 1px transparent rgba(159, 245, 255, 0.3);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
