--- a/src/styles/FlipperStyle.css
+++ b/src/styles/FlipperStyle.css
@@ -13,8 +13,8 @@ p {
 }
 
 .flip-container .front {
-    width: 150px;
-    height: 150px;
+    width: 500px;
+    height: 500px;
 }
 
 /* .flipper .front:hover {
@@ -50,8 +50,8 @@ p {
 .flip-div {
     transition: background 0.3s ease;
 
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     /* background-color: #fff; */
     /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5); */
@@ -59,6 +59,8 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-filter: blur(5px);
+    left: -10%;
     /* font-size: 30px; */
     /* font-weight: bold; */
     /* color: #000; */
